tests/testdata/nonmem/errors/hessian.ctl
$PROBLEM [CL,QP1,VP1]
$INPUT ID TIME DV OPRED D_EPSETA_1_4 D_EPSETA_1_1 D_EPSETA_1_3 D_EPSETA_1_2 D_ETA_1 D_ETA_2 D_ETA_3 D_ETA_4 D_EPS_1 OETA_1 OETA_2 OETA_3 OETA_4
$DATA ../.datasets/data2.csv IGNORE=@
$ABBR REPLACE ETA_CL=ETA(1)
$ABBR REPLACE ETA_QP1=ETA(2)
$ABBR REPLACE ETA_VP1=ETA(3)
$PRED
BASE1 = -D_ETA_1*OETA_1
BASE2 = D_ETA_2*(-OETA_2 + ETA_CL)
BASE3 = D_ETA_3*(-OETA_3 + ETA_QP1)
BASE4 = D_ETA_4*(-OETA_4 + ETA_VP1)
BASE_TERMS = BASE1 + BASE2 + BASE3 + BASE4
IPRED = BASE_TERMS + OPRED
ERR1 = D_EPS_1*EPS(1)
ERR2 = -D_EPSETA_1_1*EPS(1)*OETA_1
ERR3 = D_EPSETA_1_2*EPS(1)*(-OETA_2 + ETA_CL)
ERR4 = D_EPSETA_1_3*EPS(1)*(-OETA_3 + ETA_QP1)
ERR5 = D_EPSETA_1_4*EPS(1)*(-OETA_4 + ETA_VP1)
ERROR_TERMS = ERR1 + ERR2 + ERR3 + ERR4 + ERR5
Y = ERROR_TERMS + IPRED
$OMEGA BLOCK(3)
0.278673	; IIV_CL
0.00782277	; IIV_BASE2_ERR3_IIV_BASE3_ERR4
0.01	; IIV_QP1
0.00873905	; IIV_BASE2_ERR3_IIV_BASE4_ERR5
0.000110439	; IIV_BASE3_ERR4_IIV_BASE4_ERR5
0.01	; IIV_VP1
$SIGMA  0.0593028 ; RUV_PROP
$ESTIMATION METHOD=COND INTER MAXEVAL=999999 MCETA=1
$ETAS FILE=model_input.phi 
